WireShark/Software/.metadata/.plugins/org.eclipse.cdt.ui/Ethernet_Test.build.log
09:11:29 **** Incremental Build of configuration Nios II for project Ethernet_Test ****
make all 
Info: Building ../Ethernet_Test_bsp/
C:/intelFPGA_lite/18.1/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../Ethernet_Test_bsp/
Compiling alt_close.c...
nios2-elf-gcc -xc -MP -MMD -c  -I./drivers/inc -I./drivers/inc/iniche -I./iniche/inc -I./iniche/src/h -I./iniche/src/h/nios2 -I./iniche/src/nios2 -I./UCOSII/inc -I./HAL/inc -I. -I./drivers/inc -pipe -D__hal__ -DALT_NO_INSTRUCTION_EMULATION -DALTERA_TRIPLE_SPEED_MAC -DALT_INICHE -DRO_ZIPFS -D__ucosii__ -DALTERA_AUTONEG_TIMEOUT_THRESHOLD=2500 -DALTERA_CHECKLINK_TIMEOUT_THRESHOLD=10000 -DALTERA_NOMDIO_TIMEOUT_THRESHOLD=1000000  -DTSE_MY_SYSTEM  -O0 -g -Wall  -mno-hw-div -mno-hw-mul -mno-hw-mulx -mgpopt=global   -o obj/HAL/src/alt_close.o HAL/src/alt_close.c
In file included from ./HAL/inc/includes.h:23:0,
                 from ./UCOSII/inc/priv/alt_sem_ucosii.h:45,
                 from ./UCOSII/inc/os/alt_sem.h:75,
                 from ./HAL/inc/priv/alt_file.h:44,
                 from HAL/src/alt_close.c:37:
./UCOSII/inc/ucos_ii.h:1708:2: error: #error "OS_CFG.H, Missing OS_TICKS_PER_SEC: Sets the number of ticks in one second"
 #error  "OS_CFG.H, Missing OS_TICKS_PER_SEC: Sets the number of ticks in one second"
  ^
make[1]: *** [obj/HAL/src/alt_close.o] Error 1
make: *** [../Ethernet_Test_bsp/-recurs-make-lib] Error 2

09:11:31 Build Finished (took 1s.567ms)

